--- a/index3.html
+++ b/index3.html
@@ -459,7 +459,7 @@ mark{background:yellow;color:black}
   gtag('js', new Date());
 
   // 기본 페이지뷰 자동 수집
-  gtag('config', 'G-XXXXXXXXXX', {
+  gtag('config', 'G-YR8SYEVY0J', {
     anonymize_ip: true
   });
 </script>
@@ -499,3 +499,4 @@ mark{background:yellow;color:black}
 
 </body>
 </html>
+
