--- a/index3.html
+++ b/index3.html
@@ -1102,7 +1102,7 @@ initStandardTab();
 (() => {
   // ✅ 여기만 네 Google Form 링크로 교체
   // 권장: viewform 뒤에 ?embedded=true 붙이면 iframe에 잘 맞음
-  const FB_FORM_URL = "https://docs.google.com/forms/d/e/여기에-폼ID/viewform?embedded=true";
+  const FB_FORM_URL = "https://naver.me/5xgAWwSb";
 
   const btn = document.getElementById('feedbackBtn');
   const modal = document.getElementById('fbModal');
@@ -1142,3 +1142,4 @@ initStandardTab();
 
 </body>
 </html>
+
